--- a/Day1/package.json
+++ b/Day1/package.json
@@ -34,6 +34,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
+    "form-data": "^4.0.4",
+    "nft.storage": "^7.2.0"
   }
 }
