--- a/Day1/package.json
+++ b/Day1/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "form-data": "^4.0.4",
-    "nft.storage": "^7.2.0"
+    "nft.storage": "^7.2.0",
+    "yargs": "^18.0.0"
   }
 }
