--- a/Day1/frontend/package.json
+++ b/Day1/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
     "form-data": "^4.0.4",
     "react": "^19.1.1",
