--- a/Day1/package.json
+++ b/Day1/package.json
@@ -36,7 +36,10 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "form-data": "^4.0.4",
     "minimist": "^1.2.8",
     "nft.storage": "^7.2.0",
