--- a/Day1/NFTDApp/vercel.json
+++ b/Day1/NFTDApp/vercel.json
@@ -1,7 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }   
+    },
     { "src": "backend/api/**/*.js", "use": "@vercel/node" }
   ],
   "routes": [
