--- a/NFTmarketPlace/frontend/package.json
+++ b/NFTmarketPlace/frontend/package.json
@@ -17,12 +17,14 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
+    "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.1",
     "tailwindcss": "^4.1.12",
     "viem": "^2.33.3",
     "wagmi": "^2.16.3",
