--- a/NFTmarketPlace/frontend/package.json
+++ b/NFTmarketPlace/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-toast": "^1.2.15",
@@ -17,10 +18,11 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
+    "alchemy-sdk": "^3.6.3",
     "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
