--- a/NFTmarketPlace/hardhat/package.json
+++ b/NFTmarketPlace/hardhat/package.json
@@ -27,6 +27,14 @@
     "typechain": "^8.3.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "alchemy-sdk": "^3.6.3",
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
+    "form-data": "^4.0.4",
+    "fs": "^0.0.1-security"
   }
 }
